final settings & fixed sign up button font (too small)

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ img{
     background-color: #A59678;
     padding: 0.25em 0.75em;
     border-radius: 100px;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
 }
 
 /* ------End of Components------ */
